force-app/main/default/objects/Elaro_Connected_Org__c/fields/Alert_Count__c.field-meta.xml
<CustomField>
    <fullName>Alert_Count__c</fullName>
    <label>Alert Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>