force-app/main/default/objects/Elaro_Connected_Org__c/fields/Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Score__c</fullName>
    <label>Compliance Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>