force-app/main/default/objects/Elaro_Connected_Org__c/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <description>Salesforce instance URL</description>
    <label>Instance URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>